[workspace]
members = [
    "checker",
    "compiler",
    "parser",
    "pipeline",
    "vm/vm",
    "vm/vm-internal",
    "vm/vm-proc-macros",
    "supervisor",
    "utils",
    "dataflow"
]

[profile.release]
debug = true
incremental = true

[patch.'https://github.com/MDBijman/aterms']
aterms = { path = "../aterms", version="0.1.0" }
[patch.'https://github.com/MDBijman/ters']
ters = { path = "../ters", version="0.1.0" }
[patch.'https://github.com/MDBijman/tecs']
tecs = { path = "../tecs", version="0.1.0" }
