[package]
name = "checker"
version = "0.1.0"
authors = ["Matthijs Bijman <matthijs@bijman.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

[dependencies.terms_format]
path = "../terms_format"
version = "0.1.0"

[dependencies.rewriter]
path = "../rewriter"
version = "0.1.0"

[lib]
name = "checker"
path = "src/lib.rs"

[[bin]]
name = "checker"
path = "src/bin.rs"