[package]
name = "checker"
version = "0.1.0"
authors = ["Matthijs Bijman <matthijs@bijman.org>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
ters   = { git="https://github.com/MDBijman/ters" }
aterms = { git="https://github.com/MDBijman/ters" }
tecs   = { git="https://github.com/MDBijman/tecs" }

[lib]
name = "checker"
path = "src/lib.rs"

[[bin]]
name = "checker"
path = "src/bin.rs"