[package]
name = "parser"
version = "0.1.0"
authors = ["Matthijs Bijman <matthijs@bijman.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
nom = "6.0.0"

[dependencies.terms_format]
path = "../terms_format"
version = "0.1.0"

[lib]
name = "parser"
path = "src/lib.rs"

[[bin]]
name = "parserx"
path = "src/bin.rs"