[package]
name = "galevm"
version = "0.1.0"
authors = ["Matthijs Bijman <matthijs@bijman.org>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.3", optional = true }
nom  = { version = "6.0.0",  optional = true }

[features]
default = ["parser", "commandline"]
parser = ["nom"]
commandline = ["clap"]

[lib]
name = "galevmlib"

[[bin]]
name = "galevm"
required-features = ["parser", "commandline"]
