[package]
name = "vm-internal"
version = "0.1.0"
authors = ["Matthijs Bijman <matthijs@bijman.org>"]
edition = "2018"

[dependencies]
nom  = { version = "6.0.0", optional = true }
dynasmrt = { version= "1.1.0" }
libc = "0.2.103"
dataflow = { path="../../dataflow", version="0.1.0" }

[features]
default = ["parser"]
parser = ["nom"]

[lib]
name = "vm_internal"
