[package]
name = "galevm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-internal = { path="../vm-internal", features=["parser"] }
vm-proc-macros = { path="../vm-proc-macros" }
clap = { version = "2.33.3" }
simple_logger = "4.0.0" 
log = "0.4.17"

[[bin]]
name = "galevm"

[lib]
name = "galevm"
